# tender_knowledge

./: .cursorrules  .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  startup.py
backend/alembic/versions/: 20260614_1500_epic5_retrieval.py  20260614_1600_document_media_assets.py  20260615_1000_epic6_generation.py  20260618_1000_knowledge_v2.py  20260618_1100_document_source_template_file.py  20260620_1000_core_four_modules_cleanup.py  20260621_1000_directory_blueprint.py  20260621_1100_repair_document_tree_headings.py  20260621_1200_widen_blueprint_text_fields.py  20260622_1000_blueprint_generation_extraction.py  20260622_1100_trim_blueprint_fields.py  20260622_1200_blueprint_embeddings.py  20260623_1000_knowledge_chunk_retrieval.py  20260626_1000_writing_techniques.py  20260628_1000_knowledge_taxonomy.py  20260628_1100_knowledge_chunk_field_trim.py  20260628_1200_knowledge_chunk_more_trim.py  20260629_1000_qualification_info.py  20260701_1000_chunk_asset_table_storage.py
backend/scripts/: seed_classification_references.py
backend/src/: config.py  main.py
backend/src/api/: __init__.py  deps.py  envelope.py
backend/src/config/: chapter_candidate_rules.yaml  outline_filter_rules.yaml
backend/src/db/: init_db.py  session.py
backend/src/models/: __init__.py  actual_bid_audit_log.py  actual_bid_parse_task.py  audit_log.py  bid_outline.py  bid_outline_node.py  bid_outline_structure_diff.py  blueprint_embedding.py  candidate_confirm_audit_log.py  candidate_knowledge.py  candidate_knowledge_stub.py  (+53 more)
backend/tests/: conftest.py
(+806 files in other folders)
